--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-screens": "^3.3.0",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-tab-view": "^2.16.0",
+    "react-native-vector-icons": "^8.1.0",
     "yup": "^0.32.9"
   },
   "devDependencies": {
