--- a/.babelrc
+++ b/.babelrc
@@ -10,7 +10,8 @@
           "@models": "./src/models",
           "@navigations": "./src/navigations",
           "@screens": "./src/screens",
-          "@validations": "./src/validations"
+          "@validations": "./src/validations",
+          "@data": "./src/data"
         }
       }]
     ]
