--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-vector-icons": "^8.1.0",
     "react-redux": "^7.2.4",
     "redux": "^4.1.0",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
     "yup": "^0.32.9"
   },
