--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,10 @@
 {
     "presets": ["module:metro-react-native-babel-preset"],
     "plugins": [
+      ["module:react-native-dotenv", {
+        "moduleName": "@env",
+        "path": ".env"
+      }],
       ["module-resolver", {
         "root": ["./src"],
         "alias": {
