--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "react-native": "0.64.1",
     "react-native-dotenv": "^3.1.1",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-paystack-webview": "^3.2.1",
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.3.0",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-tab-view": "^2.16.0",
     "react-native-vector-icons": "^8.1.0",
+    "react-native-webview": "^11.6.5",
     "react-redux": "^7.2.4",
     "redux": "^4.1.0",
     "redux-persist": "^6.0.0",
